--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -21,6 +21,7 @@
      */
     --bs-blue-100: #cfe2ff;
     --bs-blue-200: #9ec5fe;
+    --bs-blue-600: #0a58ca;
 
     --cyan-light: #96d6e0;
     --green-light: #42d042; /* forest green + 20% lighter */
