--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -1,13 +1,6 @@
 :root {
-    --body-background: #e9ebee;
-    --highlight: rgba(0, 0, 0, .05);
-    --highlight-light: rgba(0, 0, 0, .025);
-    --highlight-blue: rgba(0, 123, 255, .1);
-    --highlight-red: rgba(220, 53, 69, .1);
-    --highlight-cyan: #f0fafa;
-
     /*
-     * Bootstrap gray colors
+     * Bootstrap colors (for reference)
      *
      * --bs-gray-900: #212529;
      * --bs-gray-800: #343a40; (dark)
@@ -18,20 +11,28 @@
      * --bs-gray-300: #dee2e6;
      * --bs-gray-200: #e9ecef; (ultralight)
      * --bs-gray-100: #f8f9fa;
+     *
+     * --bs-blue-600: #0a58ca;
+     * --bs-blue-200: #9ec5fe;
+     * --bs-blue-100: #cfe2ff;
+     *
+     * --bs-cyan-200: #9eeaf9;
      */
-    --bs-blue-100: #cfe2ff;
-    --bs-blue-200: #9ec5fe;
-    --bs-blue-600: #0a58ca;
 
-    --cyan-light: #96d6e0;
+    --body-background: var(--bs-gray-200);
+    --highlight: rgba(0, 0, 0, .05);
+    --highlight-light: rgba(0, 0, 0, .025);
+    --highlight-blue: rgba(0, 123, 255, .1);
+    --highlight-red: rgba(220, 53, 69, .1);
+    --highlight-cyan: #f0fafa;
+
+    --cyan-light: var(--bs-cyan-200);
     --green-light: #42d042; /* forest green + 20% lighter */
-    --red-light: #df5a5a; /* fire brick + 20% lighter */
 
     --verifying: var(--bs-cyan);
     --correct: forestgreen;
     --incorrect: var(--bs-red);
     --correct-light: var(--green-light);
-    --incorrect-light: var(--red-light);
     --node-name: #385898;
     --node-name-ts: #389858;
 
@@ -45,11 +46,5 @@
     --reactions-negative-border: #e1d3d4;
     --comments: #f8faff;
     --comment-compose: #e0faff;
-
-    --link: var(--bs-blue);
-    --link-hover: #0056b3;
-    --link-button: #385898;
-
-    --input-focus-border: #80bdff;
-    --input-focus-shadow: rgba(0,123,255,.25);
+    --comment-button: #385898;
 }
