--- a/src/ui/control/richtexteditor/RichTextEditor.css
+++ b/src/ui/control/richtexteditor/RichTextEditor.css
@@ -4,9 +4,9 @@
 }
 
 .rich-text-editor:focus-within {
-    border-color: var(--input-focus-border);
+    border-color: var(--bs-input-focus-border-color);
     outline: 0;
-    box-shadow: 0 0 0 .2rem var(--input-focus-shadow);
+    box-shadow: var(--bs-input-focus-box-shadow);
 }
 
 .rich-text-editor TEXTAREA {
