Render display formulas as a DIV, because DIVs are not allowed inside P.

--- a/src/ui/control/richtexteditor/visual/VisualTextArea.css
+++ b/src/ui/control/richtexteditor/visual/VisualTextArea.css
@@ -38,7 +38,8 @@
 
 .visual-text-area DIV.list-item ~ P,
 .visual-text-area DIV.list-item ~ DETAILS,
-.visual-text-area DIV.list-item ~ .block-border {
+.visual-text-area DIV.list-item ~ .block-border,
+.visual-text-area DIV.list-item ~ DIV.formula {
     margin-top: 1rem;
 }
 
