--- a/src/ui/control/richtexteditor/RichTextEditor.css
+++ b/src/ui/control/richtexteditor/RichTextEditor.css
@@ -1,26 +1,29 @@
 .rich-text-editor {
     height: min-content;
     padding: 0;
+    border: 0;
 }
 
-.rich-text-editor:focus-within {
-    border-color: var(--bs-input-focus-border-color);
-    outline: 0;
-    box-shadow: var(--bs-input-focus-box-shadow);
-}
-
-.rich-text-editor TEXTAREA {
+.rich-text-editor TEXTAREA, .rich-text-editor .visual-text-area {
     display: block;
     width: 100%;
-    border: 0;
-    border-radius: .25rem;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: .5rem;
     padding: .375rem .75rem;
 }
 
+.rich-text-editor:focus-within TEXTAREA, .rich-text-editor:focus-within .visual-text-area {
+    border-color: var(--bs-input-focus-border-color);
+    outline: 0;
+    box-shadow: var(--bs-input-focus-box-shadow);
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
 .rich-text-editor-panel {
-    /*background-color: var(--bs-gray-200);*/
-    padding: .5em;
-    border-bottom: 1px solid var(--bs-gray-400);
+    background-color: var(--bs-gray-100);
+    padding: 0 .5rem;
+    border-radius: .5rem;
+    margin-bottom: .75rem;
 }
 
 .rich-text-editor-panel.hiding {
