On small screens toolbar buttons should be moved to the new line one-by-one.

--- a/src/ui/control/richtexteditor/RichTextEditor.css
+++ b/src/ui/control/richtexteditor/RichTextEditor.css
@@ -35,7 +35,7 @@
 }
 
 .rich-text-editor-panel .group {
-    display: inline-block;
+    display: inline;
 }
 
 @media only screen and (min-width: 576px) {
