--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -75,7 +75,7 @@
     font-size: .875em;
     line-height: 1.5;
     margin-top: .5em;
-    color: var(--bs-gray-600);
+    color: var(--bs-secondary);
 }
 
 .posting > .content .read-more {
