--- a/src/ui/control/richtexteditor/panel/RichTextEditorButton.css
+++ b/src/ui/control/richtexteditor/panel/RichTextEditorButton.css
@@ -31,7 +31,7 @@
 }
 
 .rich-text-editor-button.active:hover {
-    background-color: var(--highlight-blue);
+    background-color: var(--highlight-primary);
     color: var(--bs-primary);
 }
 
