--- a/src/ui/comment/compose/CommentComposePanel.css
+++ b/src/ui/comment/compose/CommentComposePanel.css
@@ -8,7 +8,7 @@
     border-radius: .5em;
     width: 1.75em;
     height: 1.75em;
-    padding: .15rem;
+    padding: .15em .15em 1.7em .15em;
 }
 
 .comment-compose-panel .left-pane .rich-text-editor-button {
