Text formatting menu for the comment composer. Expandable submenus.

--- a/src/ui/comment/compose/CommentComposeFormattingMenu.css
+++ b/src/ui/comment/compose/CommentComposeFormattingMenu.css
@@ -11,3 +11,8 @@
 .comment-compose-panel .formatting-menu-button:hover .rich-text-editor-button {
     background-color: transparent;
 }
+
+.formatting-menu {
+    max-height: 90vh;
+    overflow-y: auto;
+}
