--- a/src/ui/comment/compose/FormattingMenuItem.css
+++ b/src/ui/comment/compose/FormattingMenuItem.css
@@ -4,9 +4,18 @@
     padding-inline-start: .75em;
 }
 
+.formatting-menu-sub .formatting-menu-item {
+    padding-inline-start: 1.5em;
+    grid-template-columns: 2em 11.25em 5em;
+}
+
 @media only screen and (max-width: 575px) {
     .formatting-menu-item {
         grid-template-columns: 2em 12em 2em;
+    }
+
+    .formatting-menu-sub .formatting-menu-item {
+        grid-template-columns: 2em 11.25em 2em;
     }
 }
 
