Make comment composer's panel visible even when the bottom menu on mobile is shown. Keep the editor's area focused when the formatting menu is opened.

--- a/src/ui/comment/compose/CommentCompose.css
+++ b/src/ui/comment/compose/CommentCompose.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 575px) {
+    #comment-compose {
+        margin-bottom: 3rem;
+    }
+}
+
 #comment-compose FORM {
     display: flex;
     flex-wrap: wrap;
