--- a/src/ui/control/richtexteditor/formatting-menu/FormattingMenuButton.css
+++ b/src/ui/control/richtexteditor/formatting-menu/FormattingMenuButton.css
@@ -2,3 +2,9 @@
     max-height: 60vh;
     overflow-y: auto;
 }
+
+@media only screen and (max-width: 575px) {
+    .formatting-menu {
+        max-height: 25vh;
+    }
+}
