Preview button in the composer converted to a menu item in the submit button menu.

--- a/src/ui/compose/ComposeSubmitButton.css
+++ b/src/ui/compose/ComposeSubmitButton.css
@@ -1,4 +1,10 @@
 .submit-button {
     flex: auto;
-    text-transform: uppercase;
+    margin-inline-end: .15rem;
+}
+
+.btn.submit-menu-button {
+    flex: none;
+    border-top-right-radius: var(--bs-btn-border-radius) !important;
+    border-bottom-right-radius: var(--bs-btn-border-radius) !important;
 }
