--- a/src/ui/profile/edit/donate/DonateEditor.css
+++ b/src/ui/profile/edit/donate/DonateEditor.css
@@ -3,6 +3,7 @@
     border-radius: .9em;
     padding: .25em .9em;
     margin-right: .5em;
+    margin-bottom: .25em;
     transition: background-color .15s ease-in-out;
 }
 
