Do not render links with <A> tag in the visual editor, since it causes selection glitches on Android when adding text inside the link.

--- a/src/ui/control/richtexteditor/visual/VisualTextArea.css
+++ b/src/ui/control/richtexteditor/visual/VisualTextArea.css
@@ -12,7 +12,8 @@
     color: var(--bs-gray-600);
 }
 
-.visual-text-area A {
+.visual-text-area A, .visual-text-area .link {
+    color: var(--bs-link-color);
     text-decoration: underline;
 }
 
