--- a/src/ui/comment/compose/CommentCompose.css
+++ b/src/ui/comment/compose/CommentCompose.css
@@ -13,6 +13,7 @@
     margin-left: .5rem;
     margin-bottom: .5rem;
     flex: 1 1 0;
+    max-width: calc(100% - 36px - 1rem);
 }
 
 #comment-compose .content .form-group {
