--- a/src/ui/control/Tabs.css
+++ b/src/ui/control/Tabs.css
@@ -11,6 +11,7 @@
         flex-wrap: nowrap;
         overflow-x: auto;
         overflow-y: hidden;
+        scrollbar-width: none;
     }
 
     .nav.nav-tabs .nav-item {
