Search for people and display results on the Search page.

--- a/src/ui/search/SearchPage.css
+++ b/src/ui/search/SearchPage.css
@@ -18,3 +18,25 @@
     top: .1em;
     margin-right: .25em;
 }
+
+.search-page .nodes {
+    display: grid;
+    grid-template-columns: calc(44px + .5rem) auto min-content;
+    grid-auto-rows: min-content;
+    grid-row-gap: 1rem;
+}
+
+.search-page .nodes .node-name {
+    line-height: 150%;
+}
+
+.search-page .nodes .raw-node-name {
+    font-size: .88rem;
+    line-height: 143%;
+    color: var(--bs-gray-600);
+}
+
+.search-page .nodes .title {
+    font-size: .88rem;
+    line-height: 143%;
+}
