--- a/src/ui/mainmenu/owner/OwnerNavigator.css
+++ b/src/ui/mainmenu/owner/OwnerNavigator.css
@@ -14,19 +14,21 @@
 
 #owner-navigator .name-select {
     position: fixed;
-    top: 2.5rem;
-    width: 18rem;
+    top: 2.55rem;
+    width: min(30rem, 100vw - 1rem);
     background-color: white;
+    border: 0;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.16);
 }
 
 @media only screen and (max-width: 575px) {
     #owner-navigator .name-select {
-        left: 5.3rem;
+        left: .5rem;
     }
 }
 
 @media only screen and (min-width: 576px) {
     #owner-navigator .name-select {
-        left: 6.8rem;
+        left: 5.8rem;
     }
 }
