--- a/src/ui/mainmenu/owner/OwnerNavigator.css
+++ b/src/ui/mainmenu/owner/OwnerNavigator.css
@@ -16,9 +16,17 @@
     position: fixed;
     top: 2.55rem;
     width: min(30rem, 100vw - 1rem);
+    max-height: 23em;
+    padding-top: .25rem;
+    padding-bottom: .25rem;
     background-color: white;
     border: 0;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.16);
+}
+
+#owner-navigator .name-select HR {
+    margin: .5rem;
+    color: var(--bs-gray-400);
 }
 
 @media only screen and (max-width: 575px) {
@@ -31,4 +39,25 @@
     #owner-navigator .name-select {
         left: 5.8rem;
     }
+}
+
+#owner-navigator .name-select .search-item {
+    display: grid;
+    grid-template-columns: calc(44px + .5rem) auto;
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+}
+
+#owner-navigator .name-select .search-item .icon-cell {
+    color: var(--bs-gray-600);
+    text-align: center;
+}
+
+#owner-navigator .name-select .item.selected .icon-cell, #owner-navigator .name-select .item.selected:hover .icon-cell {
+    color: white;
+}
+
+#owner-navigator .name-select .search-item .body {
+    line-height: 150%;
+    overflow-x: hidden;
 }
