Add Montserrat font for the caption of <NothingFound>.

--- a/src/ui/search/NothingFound.css
+++ b/src/ui/search/NothingFound.css
@@ -3,6 +3,7 @@
 }
 
 .search-nothing-found .caption {
+    font-family: var(--font-messages), sans-serif;
     font-weight: 600;
     font-size: 2.25rem;
     line-height: 125%;
