--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -1,8 +1,16 @@
+@font-face {
+    font-family: Montserrat;
+    src: url("fonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("fonts/Montserrat-SemiBold.woff") format('woff');
+    font-weight: 700;
+}
+
 :root:root {
     scroll-behavior: auto;
     scrollbar-gutter: stable;
     --bs-font-sans-serif: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
                           sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-messages: Montserrat, var(--bs-font-sans-serif);
 }
 
 HTML {
