--- a/src/ui/control/FeedTopBox.css
+++ b/src/ui/control/FeedTopBox.css
@@ -41,6 +41,7 @@
     position: relative;
     top: .1em;
     color: var(--primary-800);
+    margin-left: .25rem;
 }
 
 .feed-top-button:hover .title {
