--- a/src/ui/control/dropdownmenu/DropdownMenu.css
+++ b/src/ui/control/dropdownmenu/DropdownMenu.css
@@ -10,8 +10,7 @@
 
 .dropdown-menu .caption {
     font-weight: bold;
-    margin-bottom: .5rem;
-    margin-left: .6rem;
+    padding: 0 .6rem .5rem .6rem;
 }
 
 .dropdown-menu .dropdown-item {
