--- a/src/ui/mainmenu/owner/OwnerNavigator.css
+++ b/src/ui/mainmenu/owner/OwnerNavigator.css
@@ -54,6 +54,9 @@
 }
 
 #owner-navigator .name-select .search-item .body {
+    position: relative;
+    top: .1em;
+    color: var(--bs-gray-600);
     line-height: 150%;
     overflow-x: hidden;
 }
